# scooter

./: .gitignore  CLAUDE.md  README.md  TODO.md  flake.nix  justfile  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
agent-host/: default.nix  package.json
docs/: AGENT_HOST_SHARDING.md  AGENT_MODEL_SWITCH.md  AGENT_SELF_MODIFY_FOLLOWUP.md  AGENT_TOOLS_MCP_DESIGN.md  AWS_PERMISSIONS_BROKER.md  BROKER.md  DESIGN.md  DEV_ENVIRONMENT.md  DEV_ENVIRONMENT_DESIGN.md  ERROR_SUPPRESSION_AUDIT.md  TESTING.md  (+8 more)
services/broker/: default.nix  pyproject.toml
services/broker/broker/: config.py
services/broker/broker/aws/: __init__.py  cli.py  iam.py  models.py  policy.py  service.py  store.py
services/broker/broker/core/: __init__.py  app.py  auth.py  authz.py  autolink.py  default_modules.py  registry.py  types.py
services/broker/broker/providers/: aws.py  datadog.py  echo.py  github.py  gitlab.py  jira.py  slack.py
services/broker/broker/registry/: __init__.py  routes.py  store.py
services/broker/broker/sandbox/: __init__.py  config.py  k8s.py  manifest.py  resources.py  routes.py  store.py
services/broker/broker/sources/: atlassian_oauth.py  datadog_keys.py  github_app.py  static_token.py
services/broker/broker/transports/: aws_permissions.py  git_credential.py  http_proxy.py  token_vend.py  whoami.py
services/broker/tests/: test_authz.py  test_autolink.py  test_aws_authz_gate.py  test_aws_cli.py  test_aws_iam.py  test_aws_policy.py  test_aws_provider_enable.py  test_aws_service.py  test_aws_transport.py  test_datadog.py  test_default_modules.py  test_git_credential.py  test_github_routes.py  test_gitlab.py  test_link_endpoint.py  test_registry_routes.py  test_registry_store.py  test_sandbox_k8s.py  test_sandbox_manifest.py  test_sandbox_routes.py  test_sandbox_size_store.py  test_sources.py  test_whoami.py
services/webhooks/: default.nix  pyproject.toml
services/webhooks/tests/: __init__.py  test_ack_timing.py  test_agent_host_client.py  test_config.py  test_handlers.py  test_identity_resolve.py  test_slack_existing_forward_async.py  test_slack_files.py  test_slack_mention_dedup.py  test_slack_twin_events_e2e.py  test_slack_unfurl.py  test_test_webhook.py
services/webhooks/webhooks/: __init__.py  agent_host_client.py  app.py  config.py  identity_resolve.py  models.py  status_monitor.py  store.py
services/webhooks/webhooks/handlers/: github.py  gitlab.py  jira.py  slack.py  slack_files.py  test.py
services/webhooks/webhooks/responses/: github.py  gitlab.py  jira.py  slack.py
(+285 files in other folders)
