[project]
name = "kubenix-agent-manager-broker"
version = "0.0.0"
description = "Extensible credential broker for kubenix-agent-manager sandboxes"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn",
  "httpx",
  "pydantic",
  "pydantic-settings",
  "kubernetes",   # TokenReview
  "pyjwt[crypto]", # GitHub App JWT
  # AWS permissions broker (broker/aws/):
  "boto3",        # IAM/STS provisioning
  "sqlalchemy",   # permission-request store
  "asyncpg",      # Postgres driver (shared agent-shared-db)
  "aiosqlite",    # SQLite driver (local/dev default)
]

[project.scripts]
agent-broker = "broker.core.app:main"
# Sandbox-side AWS tools (shipped in the sandbox image, call the broker with the
# pod's SA token). credential_process helper + the request CLI.
scooter-aws-credentials = "broker.aws.cli:_credentials_entry"
scooter-aws = "broker.aws.cli:_cli_entry"

# External packages can contribute provider modules via this entry-point group.
[project.entry-points."agent_broker.providers"]
# example = "my_pkg.providers:my_provider"

[tool.setuptools.packages.find]
include = ["broker*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
